# Skill-Forge

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.MD  README.md  colab_training.ipynb  package-lock.json  package.json  pyproject.toml
agent_docs/: openenv_migration_plan_v2.md
docs/plans/: 2026-03-07-openenv-slide-skill-design.md  2026-03-07-openenv-slide-skill-implementation.md
openenv/: app.py  client.py  evaluator_adapter.py  models.py  skill_manager.py  slide_generator.py  slide_skill_environment.py  start.sh
openenv/core/env_server/: types.py
output/: TASK_PROMPT.md  TASK_PROMPTS.json  evaluation_results.json  evaluation_results_gemini.json  evaluation_unified.json  evaluator.py  evaluator_gemini.py  evaluator_unified.py  generate_v0.js  generate_v1.js  generate_v2.js  generate_v3.js  generate_v4.js  generate_v5.js  generate_v5_fixed.js  generate_v6.js  generate_v7.js  generate_v7_ev.js  patronus_log_v0_baseline.json  patronus_log_v7_final.json  rl_log.md  slide_v0.pptx  slide_v1.pptx  slide_v2.pptx  slide_v3.pptx  slide_v4.pptx  slide_v5.pptx  slide_v6.pptx  slide_v7.pptx  slide_v7_ev.pptx
output/openenv_skill_final/: COLOR_RULES.md  DESIGN_RULES.md  EXAMPLES.md  FOOTER_RULES.md  LAYOUT_PATTERNS.md  TABLE_RULES.md  TITLE_RULES.md
output/skill_v0/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v1/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v2/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v3/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v4/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v5/: DESIGN_RULES.md  EXAMPLES.md
output/skill_v6/: DESIGN_RULES.md
output/skill_v7/: DESIGN_RULES.md
slide_skill_env/: Dockerfile  app.py  client.py  converter.py  evaluator.py  evaluator_adapter.py  generator.py  models.py  openenv.yaml  optimizer.py  requirements.txt  skill_manager.py  slide_skill_environment.py  start.sh
(+41 files in other folders)
