[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-skill-env"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openenv-core",
    "anthropic>=0.84.0",
    "google-genai",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["slide_skill_env*"]
